# shader-art

./: .gitignore  Cargo.toml  README.md  index.html  spin.toml
.github/workflows/: spin_deploy.yml
assets/test/: fragment.glsl
shaders/bubbleblight/: fragment.glsl
shaders/eclipse_of_the_sun/: fragment.glsl
shaders/forest_of_seasons/: fragment.glsl
shaders/guardian_of_dreams/: fragment.glsl
shaders/stormy_flight/: fragment.glsl
shaders/the_tree_elder/: fragment.glsl
shaders/web_gpu_test/: shader.wgsl
src/: components.rs  gallery.rs  home.rs  main.rs  ocean_encounter.frag  test.frag  web_gl_2_canvas.rs
src/components/: web_gl_2_canvas.rs  web_gpu_canvas.rs
src/gallery/: bubbleblight.rs  eclipse_of_the_sun.rs  forest_of_seasons.rs  guardian_of_dreams.rs  ocean_encounter.rs  stormy_flight.rs  test.rs  the_tree_elder.rs  web_gl_2_test.rs  web_gpu_test.rs
