[package]
name = "shader-art"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.6", features = ["csr"] }
web-sys = {version = "0.3.77", features = [
    "Performance",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
]}
