[package]
name = "shader-art"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"
web-sys = {version = "0.3.83", features = [
    "Performance",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlTexture",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
]}
