[package]
name = "shader-art"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"
wasm-bindgen-futures = "0.4.56"
web-sys = {version = "0.3.83", features = [
    "Gpu",
    "GpuAdapter",
    "GpuCanvasConfiguration",
    "GpuCanvasContext",
    "GpuColorTargetState",
    "GpuCommandBuffer",
    "GpuCommandEncoder",
    "GpuDevice",
    "GpuFragmentState",
    "GpuLoadOp",
    "GpuQueue",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStoreOp",
    "GpuTexture",
    "GpuTextureFormat",
    "GpuTextureView",
    "GpuVertexState",
    "Navigator",
    "Performance",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlTexture",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
]}
